--- a/src/components/PageNav/PageNavButton.css
+++ b/src/components/PageNav/PageNavButton.css
@@ -11,9 +11,21 @@
     color: inherit;
     text-decoration: none;
   }
+
+  button {
+    appearance: none;
+    background-color: transparent;
+  }
 }
 
 .PageNavButton__menu-button {
   border: none;
   cursor: pointer;
+}
+
+.PageNavButton.is-active {
+  color: #1a1a1a;
+  background-color: white;
+  border-color: #e1e1e1;
+  box-shadow: 2px 2px 2px rgba(0 0 0 / 0.05);
 }
