--- a/src/components/PageNav/PageNavButton.css
+++ b/src/components/PageNav/PageNavButton.css
@@ -3,8 +3,10 @@
   background-color: #ebedf0;
   border-radius: 0.5rem;
   padding: 0.25rem 0.5rem;
-
   color: #677289;
+
+  display: flex;
+  gap: 0.25rem;
 
   a,
   a:visited {
@@ -12,20 +14,49 @@
     text-decoration: none;
   }
 
-  button {
-    appearance: none;
-    background-color: transparent;
+  a:focus {
+    outline: none;
   }
 }
 
 .PageNavButton__menu-button {
+  appearance: none;
+  background-color: transparent;
   border: none;
   cursor: pointer;
+  visibility: hidden;
+  outline: none;
+  border-radius: 0.25rem;
+
+  &:focus-visible {
+    background-color: rgba(0 0 0 / 0.1);
+  }
 }
 
-.PageNavButton.is-active {
+.PageNavButton.is-active,
+.PageNavButton:has(:focus-visible) {
   color: #1a1a1a;
   background-color: white;
   border-color: #e1e1e1;
   box-shadow: 2px 2px 2px rgba(0 0 0 / 0.05);
+}
+
+.PageNavButton.invisible {
+  visibility: hidden;
+
+  .PageNavButton__menu-button {
+    /* children can TURN this on again in some cases, so need to override forcefully */
+    visibility: hidden !important;
+  }
+}
+
+.PageNavButton.is-active {
+  .PageNavButton__menu-button {
+    visibility: initial;
+  }
+}
+
+.PageNavButton:has(:focus-visible) {
+  border-color: #2f71e3;
+  outline: solid 2px #c5d7f4;
 }
