Add separators with buttons between pages
This required reworking the animation. Instead of making so many assumptions about the DOM, it now updates the React state to rerender. The a useLayoutEffect notices the change and adds the animation after the fact, but before the user can see the change

--- a/src/components/PageNav/PageNav.css
+++ b/src/components/PageNav/PageNav.css
@@ -1,6 +1,23 @@
 .PageNav {
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  /* gap: 1rem; */
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    border-block-start: 1px #c0c0c0 dashed;
+
+    inset-block-start: calc(50% - px);
+  }
+
+  /* All children need to be above the dotted line */
+  & > * {
+    z-index: 1;
+  }
 }
 
 .drag-avatar {
