--- a/src/components/PageNav/PageNavButton.css
+++ b/src/components/PageNav/PageNavButton.css
@@ -1,3 +1,7 @@
+.PageNavButton--wrapper {
+  display: flex;
+}
+
 .PageNavButton {
   border: solid 1px transparent;
   background-color: #ebedf0;
@@ -38,7 +42,7 @@
   color: #1a1a1a;
   background-color: white;
   border-color: #e1e1e1;
-  box-shadow: 2px 2px 2px rgba(0 0 0 / 0.05);
+  box-shadow: var(--box-shadow);
 }
 
 .PageNavButton.invisible {
