--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+
+  --box-shadow: 2px 2px 2px rgba(0 0 0 / 0.05);
 }
