--- a/src/components/PageNav/HoverSeparator.css
+++ b/src/components/PageNav/HoverSeparator.css
@@ -1,13 +1,17 @@
 .HoverSeparator {
-  padding: 0 0.5rem;
+  padding: 0 0.75rem;
   transition: padding 100ms ease-in-out;
+  display: grid;
+  place-items: center;
 
   &.is-active {
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
 }
 
 .HoverSeparator__button {
+  position: absolute;
+
   visibility: hidden;
   appearance: none;
   background-color: #677289;
@@ -35,12 +39,17 @@
   .HoverSeparator.is-active & {
     border: solid 1px #e1e1e1;
     background-color: white;
-    inline-size: 1.5rem;
-    block-size: 1.5rem;
+    inline-size: 1.25rem;
+    block-size: 1.25rem;
     cursor: pointer;
 
     > * {
       display: block;
     }
   }
+}
+
+.HoverSeparator__icon {
+  height: 1rem;
+  width: 1rem;
 }
