--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,9 @@
 .Menu {
+  position: absolute;
+  top: 0;
+  left: 0;
   border: solid 1px #e1e1e1;
+  background-color: white;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -12,6 +16,17 @@
     height: 1px;
     margin: 0;
   }
+
+  transform-origin: bottom left;
+  /* opacity: 0; */
+  /* scale: 0.8; */
+
+  /* transform: all 200ms ease-in-out; */
+
+  /* &.is-visible {
+    opacity: 1;
+    scale: 1;
+  } */
 }
 
 .Menu__list {
