--- a/src/components/PageNav/PageNavButton.css
+++ b/src/components/PageNav/PageNavButton.css
@@ -36,8 +36,8 @@
   color: #9da4b2;
   cursor: pointer;
 
-  &:focus-visible,
-  &:hover {
+  /* &:hover, */
+  &:focus-visible {
     background-color: rgba(0 0 0 / 0.1);
   }
 
