:active button color for Add

--- a/src/components/PageNav/HoverSeparator.css
+++ b/src/components/PageNav/HoverSeparator.css
@@ -43,6 +43,10 @@
     block-size: 1.25rem;
     cursor: pointer;
 
+    &:active {
+      background-color: #efefef;
+    }
+
     > * {
       display: block;
     }
